LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/Lost_Opportunity_Account_Conversion__c.object-meta.xml
<CustomObject>
    <description>SF-29: Reporting snapshot of lost opportunity account converted back to whatever status it was prior to going into the open opportunity status. The account will be converted into prospect status if there was no history on the Type filed. For details, please see the ReassignOldClosedLostAccts_Batch class.</description>
    <label>Lost Opportunity Account Conversion</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Lost Opportunity Account Conversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Opportunity Account Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>