LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lost Opportunity Account Conversions</relationshipLabel>
    <relationshipName>Lost_Opportunity_Account_Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>