LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account__r.Owner.FirstName + &quot; &quot; +  Account__r.Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>