LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <formula>TEXT(Account__r.Account_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>