LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>Id of the batch job. Used when creating a record during the batch job.</description>
    <label>AsyncApexJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>