LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/BDR_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner_Name__c</fullName>
    <formula>Opportunity__r.BDR_Owner_Name__c</formula>
    <label>BDR Owner Name</label>
    <type>Text</type>
</CustomField>