LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Most_Recent_Open_Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Open_Opp_Close_Date__c</fullName>
    <formula>Account__r.Open_Opp_Close_Date__c</formula>
    <label>Most Recent Open Opp Close Date</label>
    <type>Date</type>
</CustomField>