LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Most_Recent_Opp_Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Opp_Closed_Lost_Date__c</fullName>
    <formula>Account__r.Closed_Lost_Close_Date__c</formula>
    <label>Most Recent Opp Closed Lost Date</label>
    <type>Date</type>
</CustomField>