LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lost Opportunity Account Conversions</relationshipLabel>
    <relationshipName>Lost_Opportunity_Account_Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>