LWCLearnwithFLOWOrg/force-app/main/default/objects/Lost_Opportunity_Account_Conversion__c/fields/Opportunity_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Loss_Reason__c</fullName>
    <formula>TEXT(Opportunity__r.Loss_Reason__c)</formula>
    <label>Opportunity Loss Reason</label>
    <type>Text</type>
</CustomField>